--- a/profile.html
+++ b/profile.html
@@ -141,22 +141,22 @@
 								<td>2019年6月</td>
 							</tr>
 							<tr>
-								<th>new→</th>
+								<th></th>
 								<td>・<a href="" target="_blank">VOYAGE GROUP</a></td>
 								<td><a href="https://voyagegroup.com/internship/treasure/" target="_blank">Treasure</a></td>
-								<td>2019年8月(3週間) 予定</td>
+								<td>2019年8月12日~30日</td>
 							</tr>
 							<tr>
-								<th>new→</th>
+								<th></th>
 								<td>・<a href="https://www.cyberagent.co.jp/" target="_blank">Cyber Agent</a></td>
 								<td><a href="https://www.cyberagent.co.jp/careers/students/event/detail/id=23253" target="_blank">アドテクコンペ</a></td>
-								<td>2019年9月 予定</td>
+								<td>2019年9月6日~8日</td>
 							</tr>
 							<tr>
-								<th>new→</th>
+								<th></th>
 								<td>・<a href="https://www.cyberagent.co.jp/" target="_blank">Cyber Agent</a></td>
-								<td><a href="https://www.cyberagent.co.jp/careers/students/event/detail/id=23256" target="_blank">ヒダッカソン~API編~</a></td>
-								<td>2019年9月 予定</td>
+								<td><a href="https://www.cyberagent.co.jp/careers/st+udents/event/detail/id=23256" target="_blank">ヒダッカソン~API編~<a></td>
+								<td>2019年9月19日~20日</td>
 							</tr>
 						</table>
 						<br/>
