--- a/portfolio.html
+++ b/portfolio.html
@@ -85,10 +85,10 @@
 							</tr>
 							<tr>
 								<th></th>
-								<td colspan="3" style="text-indent:2em;">aueo</td>
+								<td colspan="3" style="text-indent:2em;"></td>
 							</tr>
 							<tr>
-								<th>new→</th>
+								<th></th>
 								<td>・<a href="https://www.cyberagent.co.jp/" target="_blank">Cyber Agent</a></td>
 								<td><a href="https://www.cyberagent.co.jp/careers/students/event/detail/id=23258">CATechJob(就業型)</a></td>
 								<td>2019年12月</td>
